plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'AIWA'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation platform('software.amazon.awssdk:bom:2.20.0')
	implementation 'software.amazon.awssdk:ec2:2.20.76'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	implementation 'com.jcraft:jsch:0.1.55'
	implementation 'com.hierynomus:sshj:0.34.0'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'software.amazon.awssdk:s3:2.20.0'
	implementation 'software.amazon.awssdk:kms:2.20.100'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.574' // 최신 AWS SDK v1 버전
	implementation 'com.amazonaws:aws-java-sdk-core:1.12.574' // Core 라이브러리
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
